# pyunicorn

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  CHANGELOG.rst  CITATION.cff  CONTRIBUTIONS.rst  LICENSE.txt  MANIFEST.in  README.rst  pylintrc  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile
docs/source/: api_doc.rst  changelog.rst  conf.py  contact.rst  development.rst  download.rst  index.rst  installing.rst  license.rst  methods.rst  publications.rst  sitemap.rst  tutorials.rst
docs/source/_static/: logo.psd
docs/source/_templates/: layout.html
docs/source/api/climate/: climate_data.rst  climate_network.rst  coupled_climate_network.rst  coupled_tsonis.rst  eventseries_climatenetwork.rst  havlin.rst  hilbert.rst  map_plots.rst  mutual_info.rst  partial_correlation.rst  rainfall.rst  spearman.rst  tsonis.rst
docs/source/api/core/: data.rst  geo_grid.rst  geo_network.rst  grid.rst  grid2d.rst  interacting_networks.rst  netcdf_dictionary.rst  network.rst  resistive_network.rst  spatial_network.rst
docs/source/api/eventseries/: eca.rst  event_series.rst
docs/source/api/funcnet/: coupling_analysis.rst  coupling_analysis_pure_python.rst
docs/source/tutorials/: ClimateNetworks.nblink  CoupledClimateNetworks.nblink  EventSeriesAnalysis.nblink  RecurrenceNetworks.nblink  VisibilityGraphs.nblink  climate_network_1.rst  recurrence_network_1.rst
examples/modules/mpi/: network_large.py  network_mc.py  network_scan_no_comm.py
examples/modules/timeseries/: recurrence_network.py
examples/tutorials/: ClimateNetworks.ipynb  CoupledClimateNetworks.ipynb  EventSeriesAnalysis.ipynb  EventSynchronisation_EventCoincidence.ipynb  RecurrenceNetworks.ipynb  VisibilityGraphs.ipynb  climate_network.ipynb  climate_network.py  climate_network_cartopy_plotting.py  climate_network_lagged.py  recurrence_network.ipynb  recurrence_network.py
notebooks/: tutorial_ClimateNetworks.ipynb  tutorial_EventSynchronisation_EventCoincidence.ipynb  tutorial_VisibilityGraphs.ipynb  tutorial_recurrenceNetwork.ipynb
notebooks/.ipynb_checkpoints/: tutorial_VisibilityGraphs-checkpoint.ipynb
pyunicorn/: __init__.py  conftest.py  legacy.py  version.py
pyunicorn/climate/: __init__.py  climate_data.py  climate_network.py  coupled_climate_network.py  coupled_tsonis.py  eventsynchronization_climatenetwork.py  havlin.py  hilbert.py  map_plots.py  mutual_info.py  partial_correlation.py  rainfall.py  spearman.py  tsonis.py
pyunicorn/climate/_ext/: __init__.py  numerics.pyx  src_numerics.c
pyunicorn/core/: __init__.py  data.py  geo_grid.py  geo_network.py  grid.py  grid2d.py  interacting_networks.py  netcdf_dictionary.py  network.py  numerics.c  numerics.pyx  resistive_network.py  spatial_network.py
pyunicorn/core/_ext/: __init__.py  numerics.pyx  src_numerics.c  types.pxd
pyunicorn/eventseries/: __init__.py  eca.py
pyunicorn/funcnet/: __init__.py  coupling_analysis.py  coupling_analysis_pure_python.py  event_synchronization.py  eventsync_climatenetwork.py
pyunicorn/funcnet/_ext/: __init__.py  numerics.pyx  src_numerics.c
pyunicorn/timeseries/: __init__.py  cross_recurrence_plot.py  inter_system_recurrence_network.py  joint_recurrence_network.py  joint_recurrence_plot.py  numerics.c  numerics.pyx  recurrence_network.py  recurrence_plot.py  surrogates.py  visibility_graph.py
pyunicorn/timeseries/_ext/: __init__.py  fast_surrogate.pyx  numerics.pyx  src_fast_numerics.c  src_fast_numerics.h  src_fast_surrogate.c  src_fast_surrogate.h  src_numerics.c
pyunicorn/utils/: __init__.py  mpi.py  navigator.py  progressbar_examples.py
pyunicorn/utils/progressbar/: __init__.py  widgets.py
src/pyunicorn/: __init__.py  version.py
src/pyunicorn/climate/: __init__.py  cartopy_plots.py  climate_data.py  climate_network.py  coupled_climate_network.py  coupled_tsonis.py  eventseries_climatenetwork.py  havlin.py  hilbert.py  map_plot.py  map_plots.py  mutual_info.py  partial_correlation.py  rainfall.py  spearman.py  tsonis.py
src/pyunicorn/core/: __init__.py  cache.py  data.py  geo_grid.py  geo_network.py  grid.py  interacting_networks.py  netcdf_dictionary.py  network.py  resistive_network.py  spatial_network.py
src/pyunicorn/eventseries/: __init__.py  event_series.py
src/pyunicorn/funcnet/: __init__.py  coupling_analysis.py  coupling_analysis_pure_python.py
src/pyunicorn/timeseries/: __init__.py  cross_recurrence_plot.py  inter_system_recurrence_network.py  joint_recurrence_network.py  joint_recurrence_plot.py  recurrence_network.py  recurrence_plot.py  surrogates.py  visibility_graph.py
src/pyunicorn/utils/: __init__.py  mpi.py  navigator.py
tests/: __init__.py  conftest.py  test_doctests.py  test_generic.py
tests/core/: TestNetwork.py  TestResitiveNetwork-complexInput.py  TestResitiveNetwork-types.py  TestResitiveNetwork-weave.py  __init__.py  utils.py
tests/test_climate/: test_climate_data.py  test_climate_network.py  test_coupled_climate_network.py  test_eventseries_climatenetwork.py  test_eventsynchronization_climatenetwork.py  test_map_plot.py  test_tsonis.py
tests/test_core/: ResistiveNetwork_utils.py  TestNetwork.py  TestResistiveNetwork-circuits.py  TestResistiveNetwork-complexInput.py  TestResistiveNetwork-cython.py  TestResistiveNetwork-types.py  TestResitiveNetwork-circuits.py  TestResitiveNetwork-cython.py  TestResitiveNetwork-types.py  TestResitiveNetwork-weave.py  __init__.py  test_cache.py  test_data.py  test_geo_grid.py  test_geo_network.py  test_grid.py  test_interacting_networks.py  test_network.py  test_resistive_networks.py  test_spatial_network.py
tests/test_eventseries/: __init__.py  test_event_series.py
tests/test_funcnet/: TestCouplingAnalysis.py  TestEventSyncronization.py  test_coupling_analysis.py  test_coupling_analysis_pure_python.py  test_event_synchronization.py
tests/test_timeseries/: TestTimeseries.py  __init__.py  test_cross_recurrence_plot.py  test_joint_recurrence_plot.py  test_recurrence_plot.py  test_surrogates.py  test_timeseries.py
tools/: install-igraph.sh  publish  update-copyright
(+31 files in other folders)
