# This file is part of pyunicorn.
# Copyright (C) 2008--2024 Jonathan F. Donges and pyunicorn authors
# URL: <https://www.pik-potsdam.de/members/donges/software-2/software>
# License: BSD (3-clause)

# package ======================================================================

[build-system]
requires = [
    "setuptools>=65",
    "wheel",
    "Cython>=3.0",
    "numpy>=1.24"
]
build-backend = "setuptools.build_meta"

# unit tests ===================================================================

[tool.pytest.ini_options]
minversion = 7.3
addopts = "-v -r a -n auto"
testpaths = ["tests"]
python_files = ["test*.py", "Test*.py"]
norecursedirs = [".git", ".cache", ".tox", ".ropeproject", "build"]
filterwarnings = [
    "ignore:datetime.datetime.utcfromtimestamp():DeprecationWarning:dateutil|tqdm",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
source = ["src/pyunicorn"]
omit = ["*/utils/navigator.py"]

# static analysis ==============================================================

[tool.pylint.main]
ignore = [
    ".cache", "__pycache__", ".pytest_cache", ".tox", ".venv", ".ropeproject",
    "build", "mpi.py"
]
ignore-patterns = ["navigator", "numerics"]
persistent = false
jobs = 0

[tool.pylint."messages control"]
disable = [
    "duplicate-code", "useless-suppression", "suppressed-message",
    "import-error", "invalid-name", "no-member", "unused-variable",
    "unused-argument", "wildcard-import", "no-name-in-module", "fixme",
    "missing-docstring", "arguments-differ", "unsubscriptable-object",
    "no-else-return", "keyword-arg-before-vararg", "invalid-unary-operand-type",
    "import-outside-toplevel", "arguments-out-of-order",
    "unsupported-assignment-operation"
]

[tool.pylint.format]
max-line-length = 79
max-module-lines = 6000

[tool.pylint.refactoring]
max-nested-blocks = 6

[tool.pylint.design]
max-args = 12
max-locals = 95
max-branches = 50
max-statements = 230
max-attributes = 23
max-public-methods = 120

[tool.pylint.reports]
output-format = "colorized"
