# This file is part of pyunicorn.
# Copyright (C) 2008--2023 Jonathan F. Donges and pyunicorn authors
# URL: <http://www.pik-potsdam.de/members/donges/software>
# License: BSD (3-clause)

# package ======================================================================

[metadata]
name = pyunicorn
version = 0.7.0a1
author = Jonathan F. Donges
author_email = donges@pik-potsdam.de
description = Unified complex network and recurrence analysis toolbox
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    complex networks statistics modeling time series analysis
    nonlinear climate recurrence plot surrogates spatial model
license = BSD
license_files = LICENSE.txt
url = http://www.pik-potsdam.de/~donges/pyunicorn/
project_urls =
    Documentation = http://www.pik-potsdam.de/~donges/pyunicorn/
    Source Code = https://github.com/pik-copan/pyunicorn
    Issue Tracker = https://github.com/pik-copan/pyunicorn/issues
platforms = all
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
install_requires =
    numpy >= 1.25
    scipy >= 1.10
    igraph >= 0.10
    h5netcdf >= 1.2
python_requires = >=3.8
packages = find:
package_dir =
    = src
include_package_data = true
zip_safe = false

[options.packages.find]
where = src
include = pyunicorn*

[options.extras_require]
dev =
    Cython >= 3.0.0b3
docs =
    sphinx >= 7.0
testing =
    tox >= 4.3
    flake8 >= 6.0
    pylint >= 2.17
    pytest >= 7.3
    pytest-xdist >= 3.3
    pytest-cov >= 4.1
    networkx >= 3.1
    cartopy >= 0.21
    matplotlib

# test suite ===================================================================

[tox:tox]
minversion = 4.3
requires =
    setuptools >= 65
isolated_build = false
usedevelop = false
envlist =
    style
    lint
    test
    docs

[testenv]
extras =
    testing
sitepackages = true
changedir = {toxinidir}
setenv =
    PYTHONPATH = {toxinidir}/src
allowlist_externals =
    flake8
    pylint
    pytest
    sphinx-build

[testenv:style]
skipsdist = true
commands =
    flake8

[testenv:lint]
skipsdist = true
commands =
    pylint src/pyunicorn tests

[testenv:test]
commands =
    pytest --cov=src/pyunicorn --import-mode=append

[testenv:docs]
extras =
    docs
commands =
    sphinx-build -j 8 -W -b html -d {envtmpdir}/doctrees docs/source {envtmpdir}/html

# test tools ===================================================================

[flake8]
extend-exclude =
    .git, .cache, .tox, .ropeproject, build, progressbar,
    docs/source/conf.py
extend-ignore =
    E121, E123, E126, E226, E24, E704, E731, F401, F403, F405, F812, F841, W503
per-file-ignores =
    */__init__.py:UnusedImport
    examples/*.py:E305

[tool:pytest]
testpaths =
    tests
python_files =
    test*.py Test*.py
norecursedirs =
    .git .cache .tox .ropeproject build progressbar
addopts =
    -r a -n auto --ignore=src/pyunicorn/utils/navigator.py
