# This file is part of pyunicorn.
# Copyright (C) 2008--2024 Jonathan F. Donges and pyunicorn authors
# URL: <https://www.pik-potsdam.de/members/donges/software-2/software>
# License: BSD (3-clause)

# package ======================================================================

[metadata]
name = pyunicorn
version = 0.7.1a1
author = Jonathan F. Donges
author_email = donges@pik-potsdam.de
description = Unified complex network and recurrence analysis toolbox
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    complex networks statistics modeling time series analysis
    nonlinear climate recurrence plot surrogates spatial model
license = BSD
license_files = LICENSE.txt
url = https://www.pik-potsdam.de/members/donges/software-2/software
project_urls =
    Documentation = http://www.pik-potsdam.de/~donges/pyunicorn/
    Source Code = https://github.com/pik-copan/pyunicorn
    Issue Tracker = https://github.com/pik-copan/pyunicorn/issues
platforms = all
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics

[options]
install_requires =
    numpy >= 1.24
    scipy >= 1.10
    igraph >= 0.11
    h5netcdf >= 1.1   ; python_version >= "3.9"
    h5netcdf == 1.1.* ; python_version <  "3.9"
    tqdm >= 4.66
python_requires = >=3.8
packages = find:
package_dir =
    = src
include_package_data = true
zip_safe = false

[options.packages.find]
where = src
include = pyunicorn*

[options.extras_require]
dev =
    Cython >= 3.0
tests =
    matplotlib >= 3.6
    cartopy >= 0.21   ; python_version >= "3.9"
    cartopy == 0.21.1 ; python_version <  "3.9"
    networkx >= 3.1   ; python_version >= "3.9"
    networkx == 3.1.* ; python_version <  "3.9"
    tox >= 4.11
    flake8 >= 7.0
    pylint >= 3.0
    pytest >= 8.0
    pytest-xdist >= 3.5
    pytest-cov >= 4.1
docs =
    sphinx >= 7.0
    nbsphinx >= 0.9.3
    nbsphinx-link >= 1.3.0
    ipython >= 8.4
    pandoc >= 2.3
    matplotlib >= 3.6

# test suite ===================================================================

[tox:tox]
requires =
    setuptools >= 65
isolated_build = false
usedevelop = false
envlist =
    style
    lint
    test
    docs

[testenv]
skip_install = true
skipsdist = true
sitepackages = true
changedir = {toxinidir}
setenv =
    PYTHONPATH = {toxinidir}/src
passenv = WINDIR, LC_ALL
allowlist_externals =
    flake8
    pylint
    pytest
    sphinx-build
    pandoc

[testenv:style]
commands =
    flake8 src/pyunicorn tests

[testenv:lint]
commands =
    pylint src/pyunicorn tests

[testenv:test]
extras = tests
commands =
    pytest --cov

[testenv:docs]
extras = docs
commands =
    sphinx-build -j 8 -W -b html -d {envtmpdir}/doctrees docs/source {envtmpdir}/html

# test tools ===================================================================

[flake8]
extend-exclude =
    .git, .cache, .tox, .ropeproject, build, docs/source/conf.py
extend-ignore =
    E121, E123, E126, E226, E24, E704, E731, F401, F403, F405, F812, F841, W503
per-file-ignores =
    */__init__.py:UnusedImport
    examples/*.py:E305
